--- a/book1.html
+++ b/book1.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>แนะนำหนังสือมูมิน โดย ตูเว ยานซอน</title>
-      <meta name="keywords" content="แนะนำหนังสือ, ดาวหางในเมืองมูมิน, มูมิน, ตูเว ยานซอน, มูมินกับน้ำท่วมใหญ่, มนตร์มูมิน">
-      <meta name="describtion" content="หนังสือมูมินเป็นวรรณกรรมสำหรับเด็กที่เขียนโดย ตูเว ยานซอน นักเขียนชาวฟินแลนด์ ซีรีส์นี้เล่าเรื่องราวของครอบครัวมูมิน ซึ่งเป็นสิ่งมีชีวิตคล้ายโทรลล์สีขาวอาศัยอยู่ในหุบเขามูมิน เรื่องราวมักจะเกี่ยวกับการผจญภัยของพวกเขาและเพื่อนๆ">
+      <meta name="keywords" content="มูมิน, ตูเว ยานซอน, ดาวหางในเมืองมูมิน, ผจญภัย, วรรณกรรมเยาวชน">
+      <meta name="describtion" content="ดาวหางในเมืองมูมิน หนังสือนี้เป็นการผจญภัยที่น่าตื่นเต้นและลุ้นระทึก ผสมผสานระหว่างความน่ารักของตัวละครกับภัยคุกคามที่ร้ายแรงได้อย่างลงตัว">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -45,7 +45,7 @@
     </div> 
    
 <br>
-<h1>Recommended Books</h1>
+<h1>แนะนำหนังสือมูมิน</h1>
 <br>
 
 <div class="container">
@@ -68,6 +68,61 @@
   </div>
 
 </div>
+
+ิ<br>
+
+<div class="container ">
+  <div class="row">
+      <div class="col-md-8">
+          <ul class="nav nav-tabs" id="myTab" role="tablist">
+              <li class="nav-item" role="presentation">
+                  <button class="nav-link active" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane" type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="true">Contact</button>
+              </li>
+              <li class="nav-item" role="presentation">
+                  <button class="nav-link" id="location-tab" data-bs-toggle="tab" data-bs-target="#location-tab-pane" type="button" role="tab" aria-controls="location-tab-pane" aria-selected="false">Location</button>
+              </li>
+          </ul>
+          <div class="tab-content text-start" id="myTabContent">
+              <div class="tab-pane fade show active" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">
+                <br>
+                <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fprofile.php%3Fid%3D100063782213557&tabs=timeline&width=340&height=331&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="331" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+              </div>
+              <div class="tab-pane fade" id="location-tab-pane" role="tabpanel" aria-labelledby="location-tab" tabindex="0">
+                  <p>คณะอักษรศาสตร์ มหาวิทยาลัยศิลปากร เลขที่ 6 ถนนราชมรรคาใน ตำบลพระปฐมเจดีย์ อำเภอเมือง จังหวัดนครปฐม 73000</p>
+              </div>
+          </div>
+      </div>
+
+      <div class="col-md-4 d-flex align-items-start">
+          <!-- Button trigger modal -->
+          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+              คำถามที่พบบ่อย
+          </button>
+
+          <!-- Modal -->
+          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog">
+                  <div class="modal-content">
+                      <div class="modal-header">
+                          <h1 class="modal-title fs-5" id="exampleModalLabel">คำถามที่พบบ่อย</h1>
+                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                      </div>
+                      <div class="modal-body">
+                          มูมินเป็นฮิปโปหรือไม่? <br>
+                          <strong>ตอบ</strong> ไม่ใช่ น้องเป็นโทรล
+                      </div>
+                      <div class="modal-footer">
+                          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+</div>
+
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/th_TH/sdk.js#xfbml=1&version=v21.0"></script>
 
 <footer>
   By Monthakarn Luangruangroj
