--- a/index.html
+++ b/index.html
@@ -4,89 +4,141 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>แนะนำหนังสือมูมิน โดย ตูเว ยานซอน</title>
-      <meta name="keywords" content="แนะนำหนังสือ, ดาวหางในเมืองมูมิน, มูมิน, ตูเว ยานซอน, มูมินกับน้ำท่วมใหญ่, มนตร์มูมิน">
-      <meta name="describtion" content="หนังสือมูมินเป็นวรรณกรรมสำหรับเด็กที่เขียนโดย ตูเว ยานซอน นักเขียนชาวฟินแลนด์ ซีรีส์นี้เล่าเรื่องราวของครอบครัวมูมิน ซึ่งเป็นสิ่งมีชีวิตคล้ายโทรลล์สีขาวอาศัยอยู่ในหุบเขามูมิน เรื่องราวมักจะเกี่ยวกับการผจญภัยของพวกเขาและเพื่อนๆ">
+    <meta name="keywords" content="มูมิน, ตูเว ยานซอน, ดาวหางในเมืองมูมิน, มูมินกับน้ำท่วมใหญ่, มนตร์มูมิน">
+    <meta name="description" content="หนังสือมูมินเป็นวรรณกรรมสำหรับเด็กที่เขียนโดย ตูเว ยานซอน นักเขียนชาวฟินแลนด์ ซีรีส์นี้เล่าเรื่องราวของครอบครัวมูมิน ซึ่งเป็นสิ่งมีชีวิตคล้ายโทรลล์สีขาวอาศัยอยู่ในหุบเขามูมิน เรื่องราวมักจะเกี่ยวกับการผจญภัยของพวกเขาและเพื่อนๆ">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-  <div class="sticky-top">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="">MiM0N</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="http://127.0.0.1:5500/index.html">Home</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Books
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="http://127.0.0.1:5500/book1.html">ดาวหางในเมืองมูมิน</a></li>
-                  <li><a class="dropdown-item" href="http://127.0.0.1:5500/book2.html">มูมินกับน้ำท่วมใหญ่</a></li>
-                  <li><a class="dropdown-item" href="http://127.0.0.1:5500/book3.html">มนตร์มูมิน</a></li>
+
+    <div class="sticky-top">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="">MiM0N</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="http://127.0.0.1:5500/index.html">Home</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Books</a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="book1.html">ดาวหางในเมืองมูมิน</a></li>
+                                <li><a class="dropdown-item" href="book2.html">มูมินกับน้ำท่วมใหญ่</a></li>
+                                <li><a class="dropdown-item" href="book3.html">มนตร์มูมิน</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-dark" type="submit">Search</button>
+                    </form>
+                </div>
+            </div>
+        </nav>
+    </div>
+
+    <br>
+    <h1 class="text-center">แนะนำหนังสือมูมิน</h1>
+    <br>
+
+    <div class="container">
+        <div class="book mb-4">
+            <img src="images/moomin comet.jpg" alt="ดาวหางในเมืองมูมิน" class="img-fluid">
+            <div>
+                <h2>ดาวหางในเมืองมูมิน</h2>
+                <p><strong>ผู้เขียน:</strong> ตูเว ยานซอน</p>
+                <p><strong>สำนักพิมพ์:</strong> แพรวเยาวชน</p>
+                <p><strong>หมวดหมู่:</strong> วรรณกรรมเยาวชน</p>
+                <a href="http://127.0.0.1:5500/book1.html" class="btn btn-primary">Read more</a>
+            </div>
+        </div>
+
+        <div class="book mb-4">
+            <img src="images/moomin flood.jpg" alt="มูมินกับน้ำท่วมใหญ่" class="img-fluid">
+            <div>
+                <h2>มูมินกับน้ำท่วมใหญ่</h2>
+                <p><strong>ผู้เขียน:</strong> ตูเว ยานซอน</p>
+                <p><strong>สำนักพิมพ์:</strong> แพรวเยาวชน</p>
+                <p><strong>หมวดหมู่:</strong> วรรณกรรมเยาวชน</p>
+                <a href="http://127.0.0.1:5500/book2.html" class="btn btn-primary">Read more</a>
+            </div>
+        </div>
+
+        <div class="book mb-4">
+            <img src="images/moomin mon.jpg" alt="มนตร์มูมิน" class="img-fluid">
+            <div>
+                <h2>มนตร์มูมิน</h2>
+                <p><strong>ผู้เขียน:</strong> ตูเว ยานซอน</p>
+                <p><strong>สำนักพิมพ์:</strong> แพรวเยาวชน</p>
+                <p><strong>หมวดหมู่:</strong> วรรณกรรมเยาวชน</p>
+                <a href="http://127.0.0.1:5500/book3.html" class="btn btn-primary">Read more</a>
+            </div>
+        </div>
+    </div>
+
+    <br>
+    <div class="container ">
+        <div class="row">
+            <div class="col-md-8">
+                <ul class="nav nav-tabs" id="myTab" role="tablist">
+                    <li class="nav-item" role="presentation">
+                        <button class="nav-link active" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane" type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="true">Contact</button>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <button class="nav-link" id="location-tab" data-bs-toggle="tab" data-bs-target="#location-tab-pane" type="button" role="tab" aria-controls="location-tab-pane" aria-selected="false">Location</button>
+                    </li>
                 </ul>
-              </li>
-            </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-dark" type="submit">Search</button>
-            </form>
-          </div>
-        </div>
-      </nav>
-    </div> 
-   
-<br>
-<h1>Recommended Books</h1>
-<br>
+                <div class="tab-content text-start" id="myTabContent">
+                    <div class="tab-pane fade show active" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">
+                      <br>
+                      <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fprofile.php%3Fid%3D100063782213557&tabs=timeline&width=340&height=331&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="331" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                    </div>
+                    <div class="tab-pane fade" id="location-tab-pane" role="tabpanel" aria-labelledby="location-tab" tabindex="0">
+                        <p>คณะอักษรศาสตร์ มหาวิทยาลัยศิลปากร เลขที่ 6 ถนนราชมรรคาใน ตำบลพระปฐมเจดีย์ อำเภอเมือง จังหวัดนครปฐม 73000</p>
+                    </div>
+                </div>
+            </div>
 
-<div class="container">
-    <div class="book">
-        <img src="images/moomin comet.jpg" alt="">
-        <div>
-            <h2>ดาวหางในเมืองมูมิน</h2>
-            <p><strong>ผู้เขียน:</strong> ตูเว ยานซอน</p>
-            <p><strong>สำนักพิมพ์:</strong> แพรวเยาวชน</p>
-            <p><strong>หมวดหมู่:</strong> วรรณกรรมเยาวชน</p>
-            <a href="http://127.0.0.1:5500/book1.html" class="btn btn-primary">Read more</a>
-        </div>
-    </div>
+            <div class="col-md-4 d-flex align-items-start">
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                    คำถามที่พบบ่อย
+                </button>
 
-    <div class="book">
-        <img src="images/moomin flood.jpg" alt="">
-        <div>
-            <h2>มูมินกับน้ำท่วมใหญ่</h2>
-            <p><strong>ผู้เขียน:</strong> ตูเว ยานซอน</p>
-            <p><strong>สำนักพิมพ์:</strong> แพรวเยาวชน</p>
-            <p><strong>หมวดหมู่:</strong> วรรณกรรมเยาวชน</p>
-            <a href="http://127.0.0.1:5500/book2.html" class="btn btn-primary">Read more</a>
-        </div>
-    </div>
-
-    <div class="book">
-        <img src="images/moomin mon.jpg" alt="">
-        <div>
-            <h2>มนตร์มูมิน</h2>
-            <p><strong>ผู้เขียน:</strong> ตูเว ยานซอน</p>
-            <p><strong>สำนักพิมพ์:</strong> แพรวเยาวชน</p>
-            <p><strong>หมวดหมู่:</strong> วรรณกรรมเยาวชน</p>
-            <a href="http://127.0.0.1:5500/book3.html" class="btn btn-primary">Read more</a>
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h1 class="modal-title fs-5" id="exampleModalLabel">คำถามที่พบบ่อย</h1>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                มูมินเป็นฮิปโปหรือไม่? <br>
+                                <strong>ตอบ</strong> ไม่ใช่ น้องเป็นโทรล
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-</div>
 
-<footer>
-    By Monthakarn Luangruangroj
-</footer>
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/th_TH/sdk.js#xfbml=1&version=v21.0"></script>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <footer class="text-center mt-5">
+        <p>By Monthakarn Luangruangroj</p>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
-</html> 
+</html>
